--- a/.gitignore
+++ b/.gitignore
@@ -58,44 +58,45 @@ docker-compose.yml
 
 # FRONTEND (REACT) files
 # Dependency directories
-/node_modules
+frontend/node_modules
 
 # Build output directories
-/build
-/dist
+frontend/build
+frontend/dist
 
 # dotenv environment variable files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+frontend/.env
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
 
 # Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
 
 # Operating system files
-.DS_Store
-Thumbs.db
+frontend/.DS_Store
+frontend/Thumbs.db
 
 # Editor/IDE directories and files
 .idea/
-.vscode/
-*.sublime-workspace
+frontend/.idea
+frontend/.vscode/
+frontend/*.sublime-workspace
 
 # Coverage directory (if using testing tools like Jest)
-coverage/
+frontend/coverage/
 
 # Optional npm cache directory
-.npm
+frontend/.npm
 
 # Optional eslint cache
-.eslintcache
+frontend/.eslintcache
 
 # Optional stylelint cache
-.stylelintcache
+frontend/.stylelintcache
 
 # Optional flow type
-.flowconfig
+frontend/.flowconfig
